--- a/qinshift/cas-tabeli/form.html
+++ b/qinshift/cas-tabeli/form.html
@@ -11,34 +11,94 @@
     <form action="" method="POST">
             <label for="username">Username:</label>
             <input type="text" name="username" id="username">
-
             <br>
-            <label for="password">Password</label>
+            <br>
+            <label for="password">Password:</label>
             <input type="password" name="password" id="password">
             <br>
-    
+            <br>
             <label for="comments">Comments</label>
             <textarea name="comments" id="comments" cols="50" rows="10"></textarea>
             <br>
-
-            <input type="radio" name="genre" value="rock" id="pop">
+            <br>
+            <!--selektiras vo krukcinja - so type= radio-->
+            <p>Please select your favorite music type</p>
+            <input type="radio" name="genre" value="pop" id="pop">
             <label for="pop">pop</label>
             <br>
             <input type="radio" name="genre" value="rock" id="rock">
-            <label for="rock">pop</label>
+            <label for="rock">rock</label>
             <br>
-            <input type="radio" name="genre" value="rock" id="jaz">
-            <label for="jaz">pop</label>
-
+            <input type="radio" name="genre" value="jaz" id="jaz">
+            <label for="jaz">jaz</label>
             <br>
-            <p>please select cheak box</p>
+            <br>
+            <!--selektiras/chekiras kvadratcinja - so type= checkbox-->
+            <p>please select your favorite service</p>
             <input type="checkbox" name="service" value="iTunes" checked="checked">
-            <label for="iTunes" ></label>
-
+            <label for="iTunes" >iTunes</label>
+            <br>
+            <input type="checkbox" name="service" value="spotify">
+            <label for="spotify" >spotify</label>
+            <br>
+            <input type="checkbox" name="service" value="lastFM" >
+            <label for="lastFM" >lastFM</label>
+            <br>
+            <br>
+            <!--drop-down meni so devices-->
+            <label for="devices">on which device you listen music on</label>
+            <select name="devices" id="devices">
+                <option value="" disabled selected hidden>select your option</option>
+                <option value="iPod" disabled>iPod</option>
+                <option value="radio">radio</option>
+                <option value="computer">computer</option>                
+            </select>
+            <br>
+            <br>
+            <!--multiple selection box multiple size-->
+            <label for="instruments">what instrument you prefer</label>
+            <select name="instruments" id="instruments" multiple size="3">
+                <option value="" disabled selected hidden>select your option</option>
+                <option value="guitar">guitar</option>
+                <option value="keyboard">keyboard</option>
+                <option value="drums">drums</option>                
+            </select>
+            <br>
+            <br>
+            <!--upload file option-->
+            <label for="upload">upload your song here</label>
+            <input type="file" name="upload" id="upload">
+            <br>
+            <br>
+            <!--vnes na mail-->
+            <label for="email">type your email</label>
+            <input requered type="email" name="email" id="email" placeholder="123@gmail.com">
+            <br>
+            <br>
+            <!--kraj na form-->
+            <input type="submit" value="Subscribe">
+            <input type="reset" value="Reset">
+            <br>
             <br>
 
-
+            <!--gruping form elements-->
+            <button id="someButtonID">
+                some buttons
+            </button>
+            <input type="hidden" name="product-code" value="p1234">
+            <fieldset>
+                <legend>Contact details</legend>
+                <label for="email">Email</label>
+                <input type="text" name="email" id="email" >
+                <label for="mobile">Mobile</label>
+                <input type="tel" name="mobile" id="mobile">
+                <label for="telephone">Phone</label>
+                <input type="tel" name="telephone" id="telephone">
+            </fieldset>
+            <br>
+            <br>
+            <input type="date" name="date" id="date">
     </form>
-    
+
 </body>
 </html>
