--- a/qinshift/cas-tabeli/tabeli.html
+++ b/qinshift/cas-tabeli/tabeli.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>tables</h1>
-    <table>
+    <table border="1">
         <thead>
             <th>Ime</th>
             <th>Vozrast</th>
@@ -19,15 +19,23 @@
                     <td>Robert</td>
                     <td>52</td>
                     <td>robert.ristovski@gmail.com</td>
-                        <tr>
-                            <td>Slave</td>
-                            <td>40</td>
-                        </tr>
                 </tr>
+                    <tr>
+                        <td>Slave</td>
+                        <td>40</td>
+
+                    </tr>
+
+                        <tr>
+                            <td>Ivica</td>
+                            <td>38</td>
+                            <td><img src="./pngquant2.png" width="100px" alt=""></td>
+                        </tr>
+                
         </tbody>
             
         <tfoot>
-            <th colspan="2">total</th>
+            <th colspan="3">total</th>
         </tfoot>
     </table>
 
