--- a/homework-form/domasnomenu.html
+++ b/homework-form/domasnomenu.html
@@ -19,127 +19,104 @@
       <input type="text" />
       <br />
       <br />
-      <input type="radio" 
-      name="genre" 
-      value="here" 
-      id="here" />
+      <input type="radio" name="genre" value="here" id="here" />
       <label for="here">Here</label>
       <br />
-      <input type="radio" 
-      name="genre" 
-      value="ToGo" 
-      id="ToGo" />
+      <input type="radio" name="genre" value="ToGo" id="ToGo" />
       <label for="ToGo">ToGo</label>
-    </form>
-    <br />
-    <p>Sandwiches</p>
-    <form action="" method="post">
+      <br />
+      <p>Sandwiches</p>
       <p><b>Monday</b></p>
       <input
         type="radio"
         name="breakfast"
         value="tomato mozarela"
-        id="tomato mozarela"  />
+        id="tomato mozarela"
+      />
       <label for="tomato mozarela">tomato mozarela</label>
       <br />
       <input
         type="radio"
         name="breakfast"
         value="Chicken Salad"
-        id="Chicken Salad"   />
+        id="Chicken Salad"
+      />
       <label for="Chicken Salad">Chicken Salad</label>
-    </form>
-    <form action="" method="post">
       <p><b>Tuesday</b></p>
       <input
         type="radio"
         name="starter"
         value="Greek Slad wrap"
-        id="Greek Slad wrap"   />
+        id="Greek Slad wrap"
+      />
       <label for="Greek Slad wrap">Greek Slad wrap</label>
       <br />
-      <input type="radio" 
-      name="starter" 
-      value="Toto Wrap" 
-      id="Toto Wrap" />
+      <input type="radio" name="starter" value="Toto Wrap" id="Toto Wrap" />
       <label for="Toto Wrap">Toto Wrap</label>
-    </form>
-    <form action="" method="post">
       <p><b>Wendsday</b></p>
       <input
         type="radio"
         name="lacky meal"
         value="Red Pepper Hummus"
-        id="Red Pepper Hummus"  />
+        id="Red Pepper Hummus"
+      />
       <label for="Red Pepper Hummus">Red Pepper Hummus</label>
       <br />
       <input
         type="radio"
         name="lacky meal"
         value="Chicken Salad"
-        id="Chicken Salad"   />
+        id="Chicken Salad"
+      />
       <label for="Chicken Salad">Chicken Salad</label>
-    </form>
-    <form action="" method="post">
       <p><b>Thursday</b></p>
       <input
         type="radio"
         name="proteins"
         value="Carrot-Ginger Hummus wrap"
-        id="Carrot-Ginger Hummus wrap"   />
+        id="Carrot-Ginger Hummus wrap"
+      />
       <label for="Carrot-Ginger Hummus wrap">Carrot-Ginger Hummus wrap</label>
       <br />
-      <input type="radio" 
-      name="proteins" 
-      value="Egg Salad" 
-      id="Egg Salad" />
+      <input type="radio" name="proteins" value="Egg Salad" id="Egg Salad" />
       <label for="Egg Salad">Egg Salad</label>
-    </form>
-    <form action="" method="post">
       <p><b>Friday</b></p>
       <input
         type="radio"
         name="easy breakfast"
         value="Dado wrap"
-        id="Dado wrap"  />
+        id="Dado wrap"
+      />
       <label for="Dado wrap">Dado wrap</label>
       <br />
       <input
         type="radio"
         name="easy breakfast"
         value="Tuna Salad"
-        id="Tuna Salad"  />
+        id="Tuna Salad"
+      />
       <label for="Tuna Salad">Tuna Salad</label>
-    </form>
-    <form action="" method="post">
       <br />
       <input
         type="radio"
         name="extra"
         value="Gluten free bread (74c extra)"
-        id="Gluten free bread (74c extra)" />
+        id="Gluten free bread (74c extra)"
+      />
       <label for="Gluten free bread (74c extra)"
-        >Gluten free bread (74c extra)</label>
+        >Gluten free bread (74c extra)</label
+      >
     </form>
     <p>Snack</p>
     <form action="" method="post">
       <p><b>Snacks</b></p>
-      <input type="radio" 
-      name="fruit" 
-      value="Apple" 
-      id="Apple" />
+      <input type="radio" name="fruit" value="Apple" id="Apple" />
       <label for="Apple">Apple</label>
       <br />
-      <input type="radio" 
-      name="fruit" 
-      value="Banana" 
-      id="Banana" />
+      <input type="radio" name="fruit" value="Banana" id="Banana" />
       <label for="Banana">Banana</label>
       <br />
-      <input type="radio" 
-      name="fruit" 
-      value="Patato Chips" 
-      id="Patato Chips" />
+      <input type="radio" name="fruit" value="Patato Chips" id="Patato Chips" />
       <label for="Patato Chips">Patato Chips</label>
     </form>
     <br />
@@ -155,15 +132,13 @@
       <option value="Hot or Iced Black Tea">Hot or Iced Black Tea</option>
     </select>
     <form action="" method="post">
-      <input type="checkbox" 
-      name="service" 
-      value="Large Drink (75c extra)" />
+      <input type="checkbox" name="service" value="Large Drink (75c extra)" />
       <label for="Large Drink (75c extra)">Large Drink (75c extra)</label>
       <br />
       <br />
       <!--end of menu-->
-      <input type="submit" value="Subscribe" />
-      <input type="reset" value="Reset" />
+      <input type="submit" value="subscribe" />
+      <input type="reset" value="Reset">
     </form>
   </body>
 </html>
