--- a/qinshift/cas-flex/index.html
+++ b/qinshift/cas-flex/index.html
@@ -1,11 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>flex</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div>
+          <a href="">HOME</a>
+          <a href="">ABOUT</a>
+          <a href="">CONTACT</a>
+        </div>
+
+        <div>
+          <a href="">Login</a>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <aside>
+        <a href="">cars</a>
+        <a href="">truck</a>
+        <a href="">RV's</a>
+      </aside>
+      <section class="main-section">
+        <article>
+          <h2>se prodava ford fiesta itno!1</h2>
+          <img
+            src="https://d193ppza2qrruo.cloudfront.net/production/images/HAMPSON.2.jpg"
+            alt=""
+          />
+          <a href="">se prodava neuvezena so kes</a>
+        </article>
+        <article>
+            <h2>se prodava ford fiesta itno!1</h2>
+            <img
+              src="https://d193ppza2qrruo.cloudfront.net/production/images/HAMPSON.2.jpg"
+              alt=""
+            />
+            <a href="">se prodava neuvezena so kes</a>
+          </article>
+          <article>
+            <h2>se prodava ford fiesta itno!1</h2>
+            <img
+              src="https://d193ppza2qrruo.cloudfront.net/production/images/HAMPSON.2.jpg"
+              alt=""
+            />
+            <a href="">se prodava neuvezena so kes</a>
+          </article>
+          <article>
+            <h2>se prodava ford fiesta itno!1</h2>
+            <img
+              src="https://d193ppza2qrruo.cloudfront.net/production/images/HAMPSON.2.jpg"
+              alt=""
+            />
+            <a href="">se prodava neuvezena so kes</a>
+          </article>
+          <article>
+            <h2>se prodava ford fiesta itno!1</h2>
+            <img
+              src="https://d193ppza2qrruo.cloudfront.net/production/images/HAMPSON.2.jpg"
+              alt=""
+            />
+            <a href="">se prodava neuvezena so kes</a>
+          </article>
+          <article>
+            <h2>se prodava ford fiesta itno!1</h2>
+            <img
+              src="https://d193ppza2qrruo.cloudfront.net/production/images/HAMPSON.2.jpg"
+              alt=""
+            />
+            <a href="">se prodava neuvezena so kes</a>
+          </article>
+          <article>
+            <h2>se prodava ford fiesta itno!1</h2>
+            <img
+              src="https://d193ppza2qrruo.cloudfront.net/production/images/HAMPSON.2.jpg"
+              alt=""
+            />
+            <a href="">se prodava neuvezena so kes</a>
+          </article>
+          <article>
+            <h2>se prodava ford fiesta itno!1</h2>
+            <img
+              src="https://d193ppza2qrruo.cloudfront.net/production/images/HAMPSON.2.jpg"
+              alt=""
+            />
+            <a href="">se prodava neuvezena so kes</a>
+          </article>
+      </section>
+    </main>
+  </body>
 </html>
