--- a/qinshift/position/slika2/index.html
+++ b/qinshift/position/slika2/index.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>slika1</title>
-</head>
-<body>
-    <header id="head1">
-          <div>
-            <a href="" id="head-txt"><b>HEADER</b></a>
-          </div>
-    </header>
-    <header id="head2">
-        <div>
-          <a href="" id="nav-txt"><b>NAVIGATION</b></a>
-        </div>
-  </header>
-  <header id="head3">
-    <div>
-      <a href="" id="menu-txt"><b>MENU</b></a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>slika2</title>
+  </head>
+  <body>
+    <div id="head1">
+      <a href="" id="head-txt"><b>HEADER</b></a>
     </div>
-</header>
-<header id="head4">
-    <div>
+
+    <div id="head2">
+      <a href="" id="nav-txt"><b>NAVIGATION</b></a>
+    </div>
+
+    <div id="head3">
+      <a href="" id="menu-txt"><b>MENU</b></a>
       <a href="" id="content-txt"><b>CONTENT</b></a>
     </div>
-</header>
-<header id="head5">
-    <div>
+
+    <div id="head5">
       <a href="" id="footer-txt"><b>FOOTER</b></a>
     </div>
-</header>
-
-</body>
+  </body>
 </html>
