--- a/class-task - flex/index.html
+++ b/class-task - flex/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="main-pic">
-        <div class="first3">
-            <div id="white-up"></div>
-            <div id="white-middle"></div>
-        </div>
-       <div class="other3">
-            <div id="blue"></div>
-            <div id="white-down"></div>
-            <div class="yellow"></div>
-       </div>          
+      <div class="first3-left">
+        <div id="white-up"></div>
+        <div id="white-middle"></div>
+        <div id="blue"></div>
+      </div>
+      <div class="other3-rigth">
+        <div id="white-down"></div>
+        <div id="yellow"></div>
+      </div>
     </div>
-    
-</body>
+  </body>
 </html>
