--- a/qinshift/casovi-java/class5/index.html
+++ b/qinshift/casovi-java/class5/index.html
@@ -8,6 +8,10 @@
 <body>
     
 
-    <script src="script.js"></script>
+    <!--<script src="script.js"></script>-->
+    <!--<script src="srcipt2.js"></script>-->
+    <script src="script3.js"></script>
+
+
 </body>
 </html>
