--- a/qinshift/casovi-java/class6/index.html
+++ b/qinshift/casovi-java/class6/index.html
@@ -8,11 +8,6 @@
 <body>
     
 
-    <!--<script src="script.js"></script>-->
-    <!--<script src="srcipt2.js"></script>-->
-   <!--<script src="script3.js"></script>-->
-   <script src="script-hm.js"></script>
-
-
+    <script src="script.js"></script>
 </body>
 </html>
