--- a/qinshift/casovi-java/class9/index.html
+++ b/qinshift/casovi-java/class9/index.html
@@ -21,11 +21,16 @@
             <p>Hello again!</p>
             <p>Yes it is another sub header!</p>
         </div>
-        <button>It does nothing :(</button>
+        <input type="button" value="It does nothing :(">
         <input type="text" value="Cool">
     </div>
 
-    <script src="./scripts/app.js"></script>
+
+
+    <script src="./scripts/lib/jquery-3.7.1.js"></script>
+    <!-- <script src="./scripts/app.js"></script> -->
+     <script src="./scripts/events.js"></script>
+
     
 </body>
 
