--- a/qinshift/casovi-java/winter-exams/calculator/calc-2/index.html
+++ b/qinshift/casovi-java/winter-exams/calculator/calc-2/index.html
@@ -13,7 +13,7 @@
   <body>
     <section class="calcContainer">
       <div class="display">
-        <h1>0</h1>
+        <h1 id="inputValue">0</h1>
       </div>
 
       <div class="btnsContainer">
