--- a/qinshift/casovi-java/exercise09/index.html
+++ b/qinshift/casovi-java/exercise09/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <title>Phonebook</title>
+   <title>Phonebook</title>
   </head>
   <body>
     <div>
@@ -13,10 +12,15 @@
       <br />
       <input type="text" name="lastName" id="lastName" placeholder="Last Name" />
       <br />
-      <input type="text" name="phoneNumber" id="phoneNumber" placeholder="Phone Number" />
+      <input type="text" 
+      name="phoneNumber" id="phoneNumber" 
+      placeholder="Phone Number" />
       <br />
     </div>
-    <button id="save">Save</button>
+    <button id="reset">Reset Input</button>
+    <br>
+    <br>
+    <button id="save">Save to Phonebook</button>
     <table id="phoneBook" border="2" style="padding: 2px">
       <thead>
         <tr>
