--- a/qinshift/java-advance/class2/studentform.html
+++ b/qinshift/java-advance/class2/studentform.html
@@ -6,28 +6,39 @@
     <title>Document</title>
 </head>
 <body>
-      <div>
-        <button type="button" id="addStudent">Add Student</button>
-        <button type="button" id="saveStudent">Save Student</button>
-        <button type="button" id="resetForm">Reset / Clean</button>
-        <button type="button" id="showStudent">Show Student</button>
+<div id="formInput" >
+    <div id="inputForm" >
+        <label for="fName">First Name</label>
+        <input type="text" id="fName" style="display: block;">
     </div>
-    <div id="addstudentform" style="display: none;">
-        <label for="firstname">First Name</label>
-        <input type="text" name="firstname" />
-        <label for="lastname">Last Name</label>
-        <input type="text" name="lastname" />
+    <br>
+    <div id="inputForm">
+        <label for="lName">Last Name</label>
+    <input type="text" id="lName" style="display: block;">
+    </div>
+    <br>
+    <div id="inputForm" >
         <label for="age">Age</label>
-        <input type="number" id="age" />
-        <label for="email">Email</label>
-        <input type="email" id="email" />
+        <input type="number" id="age" style="display: block;">
     </div>
-    <div id="content">
-        <!-- <p>1. Test Todo: some test </p>
-        <button>Complete</button>
-        <button>Remove</button> -->
-    </div> 
+    <br>
+    <div id="inputForm">
+        <label for="emal">Email</label>
+    <input type="email" id="eMail" style="display: block;">
+    </div>
+</div>
+<br><br>
+<div>
+    <button type="submit" id="addStudent">Add Student</button>
+    <button type="reset" id="resetData">Clear Input</button>
+    <div style="display: block;">
+        <br>
+        <button type="button" id="showData">Show Students</button>
+    </div>
+</div>
+<div id="database">
 
+</div>
 </body>
 <script src="studentform.js"></script>
 </html>
