--- a/qinshift/java-advance/class09/asynawayt.html
+++ b/qinshift/java-advance/class09/asynawayt.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Callbacks</title>
+    <title>Document</title>
 </head>
 <body>
-    
-<h1>Callbacks</h1>
+    <h1>asyncaway</h1>
+
+<button>Get data</button>
 
 </body>
-<script src="index.js"></script>
+<script src="asynawayt.js"></script>
 </html>
