--- a/qinshift/java-advance/class09/promises.html
+++ b/qinshift/java-advance/class09/promises.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Callbacks</title>
+    <title>Document</title>
 </head>
 <body>
-    
-<h1>Callbacks</h1>
-
+    <h1>Promises</h1>
 </body>
-<script src="index.js"></script>
+<script src="promises.js"></script>
 </html>
