--- a/qinshift/java-advance/homework/fakestore.html
+++ b/qinshift/java-advance/homework/fakestore.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./src/fakestore.css">
     <title>fakestore</title>
 </head>
+
 <body>
     <header class="header">
         <div class="top-bar">
@@ -18,7 +23,7 @@
                 </section>
                 <section class="emai">
                     <i class="fa-solid fa-envelope icon"></i>
-                        info@fakestore.rj 
+                    info@fakestore.rj
                 </section>
             </div>
         </div>
@@ -31,24 +36,34 @@
                 <nav class="nav">
                     <ul class="nav_list">
                         <li class="nav-item">
-                          <a id="productsBtn"class="nav-link btn" aria-current="page" href="#">Products</a>
+                            <a id="productsBtn" class="nav-link btn" aria-current="page" href="#">Products</a>
                         </li>
+                        <!-- Category Menu -->
+                        <nav id="category-menu">
+                            <button class="category-btn btn" data-category="all">All Categories</button>
+                        </nav>
+
                         <li class="nav-item">
-                          <a id="cartBtn" class="nav-link btn" href="#">Cart</a>
+                            <a id="cartBtn" class="nav-link btn" href="#">Cart</a>
                         </li>
-                      </ul>
+                    </ul>
                 </nav>
-           </div>
+            </div>
         </div>
     </header>
+     <!-- Product Grid -->
+     <section id="product-grid"></section>
+    
+
+     
     <div id="filters" class="container" style="display: none">
         <div id="category-filter" class="col-md-8"></div>
         <div class="col-md-4"></div>
-      </div>
-      <div id="products" style="display: none">
+    </div>
+    <div id="products" style="display: none">
         <h1 id="category-title"></h1>
         <div id="show-products"></div>
-      </div>
+    </div>
     </div>
     <div class="row">
         <div class="col"></div>
@@ -64,4 +79,5 @@
 
 </body>
 <script src="./src/fakestore.js"></script>
+
 </html>
