--- a/qinshift/java-advance/homework/new-fakestore/fakestoreproducts.html
+++ b/qinshift/java-advance/homework/new-fakestore/fakestoreproducts.html
@@ -58,6 +58,7 @@
             </div>
         </div>
     </header>
+    <img src="src/assets/img/loader.gif" class="center" id="loader">
     
         <div class="row row-cols-1 row-cols-md-3 g-4 mt-4" id="product-grid"></div>
 
