--- a/qinshift/java-advance/homework/new-fakestore/fakestoreproducts.html
+++ b/qinshift/java-advance/homework/new-fakestore/fakestoreproducts.html
@@ -29,36 +29,36 @@
         <div class="bottom-bar">
             <div class="bottom-bar_content">
                 <a href="#" class="logo">
-                    <img src="logo-cart.png" alt="" class="logo_img">
+                    <img src="logo-cart.png" class="logo_img">
                     <span class="logo_text">FakeStoreProducts</span>
                 </a>
                 <nav class="nav">
                     <ul class="nav_list">
                         <li class="nav-item">
-                            <a id="productsBtn" class="nav-link btn" aria-current="page" href="#">Products</a>
+                            <a id="productsBtn" class="nav-link btn" aria-current="page" >Products</a>
                         </li>
                         <div class="btn-group">
                             <button type="button" class="btn category-btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                               Gategories
                             </button>
                             <ul class="dropdown-menu dropdown-menu-end">
-                              <li><button class="dropdown-item" type="button" id="tvBtn">TV</button></li>
-                              <li><button class="dropdown-item" type="button" id="audioBtn">AUDIO</button></li>
-                              <li><button class="dropdown-item" type="button" id="laptopBtn">LAPTOP</button></li>
-                              <li><button class="dropdown-item" type="button" id="mobileBtn">MOBILE</button></li>
-                              <li><button class="dropdown-item" type="button" id="gamingBtn">GAMING</button></li>
-                              <li><button class="dropdown-item" type="button" id="applianceBtn">APPLIANCE</button></li>
+                              <li><button class="dropdown- btn" type="button" id="tvBtn">TV</button></li>
+                              <li><button class="dropdown- btn" type="button" id="audioBtn">AUDIO</button></li>
+                              <li><button class="dropdown- btn" type="button" id="laptopBtn">LAPTOP</button></li>
+                              <li><button class="dropdown- btn" type="button" id="mobileBtn">MOBILE</button></li>
+                              <li><button class="dropdown- btn" type="button" id="gamingBtn">GAMING</button></li>
+                              <li><button class="dropdown- btn" type="button" id="applianceBtn">APPLIANCE</button></li>
                             </ul>
                           </div>
                         <li class="nav-item">
-                            <a id="cartBtn" class="nav-link btn" href="#">Cart</a>
+                            <a id="cartBtn" class="nav-link btn" >Cart</a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
-    <img src="src/assets/img/loader.gif" class="center" id="loader">
+    <img src="loader.gif" class="center" id="loader">
     
         <div class="row row-cols-1 row-cols-md-3 g-4 mt-4" id="product-grid"></div>
 
