--- a/qinshift/java-advance/fakestore/fakestore.html
+++ b/qinshift/java-advance/fakestore/fakestore.html
@@ -39,7 +39,7 @@
                         </li>
                         <div class="btn-group" >
                             <button type="button" class="btn dropdown-toggle btn-primary mb-3" data-bs-toggle="dropdown" aria-expanded="false">
-                              Gategories
+                              Categories
                             </button>
                             <ul class="dropdown-menu dropdown-menu-end" style="background-color: rgb(50, 51, 53); text-align: center; border-radius: 50px;">
                               <li><button class="dropdown- btn" type="button" id="tvBtn">TV</button></li>
